Thesis: finished refactoring section 2.4 on definitions of Permutation.

--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -496,14 +496,14 @@ Having said that, how do we define what it means for two lists to be permutation
 ]
 {Coq}{Snippets/SpecifyTheProblem.v}
 
-After all the praise inductive definitions got up to now, we might be tempted to declare victory and go on to implement something that satisfies the specification, but we won't be this hasty -- there's one more concept that can be useful for validating and improving specifications. Let's say we have a feeling that this definition will fail the ``easy to use'' criterion at some point during a proof of correctness of some nontrivial sorting algorithm. We think this could be so because the algorithm moves list elements around in ways that don't play too well with the above definition of \m{Permutation}. How to find a better definition in such a case?
+After all the praise inductive definitions got up to now, we might be tempted to declare victory and go on to implement something that satisfies the specification, but we won't be this hasty -- there's one more concept that can be useful for validating and improving specifications. Let's say we have a feeling that this definition will fail the ``easy to use'' criterion at some point in the future during a proof of correctness of some nontrivial sorting algorithm. We think this could be so because the algorithm moves list elements around in ways that don't play too well with the above definition of \m{Permutation}. How to find a better definition in such a case?
 
 \begin{center}
     \textbf{Formally verified algorithm concept/technique \#0.75} \\
     Sometimes we can find an alternative specification by changing its focus.
 \end{center}
 
-This one is admittedly quite murky. What is meant by ``focus'' here and how can we change it? The best way to understand this concept is to immediately apply it to our case. In the above definition of \m{Permutation}, the main idea is that of simultaneously building up two lists, starting from two \m{[]}s, using constructors that preserve the fact of being a permutation. So we can say that this definition focuses on \textit{generating} permutations.\footnote{Of course all inductive definitions are about generating objects. The sense in which we use the word ``generating'' will become clearer in the next paragraphs, after looking at ways of defining permutations that have a different focus.} If we want to apply the above concept/technique, we should try to define \m{Permutation} using some other crucial idea that completely characterizes what it means to be a permutation.
+This one is admittedly quite murky. What is meant by ``focus'' here and how can we change it? The best way to understand this concept is to immediately apply it to our case. In the above definition of \m{Permutation}, the main idea is that of simultaneously building up two lists, starting from two \m{[]}s, using constructors that preserve the fact of being a permutation. So, we can say that this definition focuses on \textit{generating} permutations.\footnote{Of course all inductive definitions are about generating objects. The sense in which we use the word ``generating'' will become clearer in the next paragraphs, after looking at ways of defining permutations that have a different focus.} If we want to apply the above concept/technique, we should try to define \m{Permutation} using some other crucial idea that completely characterizes what it means to be a permutation.
 
 \inputminted
 [
@@ -531,7 +531,11 @@ But counting doesn't exhaust the pool of ideas around which we can focus a defin
 
 The corresponding definition is shown in the listing above. First we define transpositions, the meaning of \m{Transposition l1 l2} being that we can take any two elements of \m{l1} and switch their places, getting \m{l2} as a result. Then a permutation is defined effectively as a sequence of such transpositions, where the constructor \m{Permutation\_refl} represents no transpositions at all, and the constructor \m{Permutation\_step\_trans} means that to permute \m{l1} into \m{l3} we first need to transpose two elements in \m{l1} to obtain \m{l2} and then permute the elements of \m{l2} to get \m{l3}.
 
-The focal ideas of \textit{generating}, \textit{counting} and \textit{permuting} lead to different definitions of \m{Permutation}, each of which has its strengths and weaknesses.
+So far we have seen three different definitions of \m{Permutation}, but there's still more to it, as each of the central ideas can be put into practice in slightly different ways. Generation can be realized by repeatedly inserting the same element into two lists at possibly different positions. The patchwork-y definition by counting could be inductivized a little, which would also generalize it to types without decidable equality. And permuting may be implemented by seeing a permutation as a sequence of \textit{adjacent} transpositions, i.e. transpositions that apply only to neighbouring elements in a list.
+
+The focal ideas of \textit{generating}, \textit{counting} and \textit{permuting} yield definitions which are very different but equivalent.\footnote{As far as types with decidable equality are concerned.} Each definition satisfies our criteria of being easy to use and abstract enough, but they still vary greatly in their strengths and weaknesses and each is fit for different purposes. Or rather, they would vary and be fit fot different purposes if we were starting from scratch and had to prove all necessary lemmas ourselves. But in case all the properties of permutations we will need are readily available, we don't need to wory about the differences, because these properties are all that we need.\footnote{Another way not to worry about how we define permutations is to abstract over this definition by taking ``permutation'' to mean any relation \m{P : forall A : Type, list A -> list A -> Prop} that satisfies the properties we will need it to satisfy. This is a glimpse of the concepts and techniques we will see in the chapters to come.} This is indeed the case, as the original definition we gave (the one based on generating) is part of Coq's standard library, which is replete with lemmas about permutations that we can use in our proofs. We will therefore stick with this definition.
+
+The final specification of a sorting function that we have arrived at through our considerations is shown in the listing below. A function \m{f} is a sorting function (according to some relation \m{R}, of which we think as the order) if the output is a sorted permutation of the input. We pack these notions into a class named \m{Sort} using a combination of parameters and fields - a distinction we will revisit later.
 
 \inputminted
 [
@@ -541,8 +545,6 @@ The focal ideas of \textit{generating}, \textit{counting} and \textit{permuting}
     lastline = 149
 ]
 {Coq}{Snippets/SpecifyTheProblem.v}
-
-The final specification of a sorting function that we have arrived at through our considerations is shown in the listing. A function \m{f} is a sorting function (according to some relation \m{R}, of which we think as the order) if the output is a sorted permutation of the input. We pack these notions into a class named \m{Sort} using a combination of parameters and fields - a distinction we will revisit later.
 
 To sum up our struggles, we once more stress the fact that inventing specifications is an art that one gets better at with experience. We learned a useful criterion for telling when a specification is bad, but to apply it we must first have something to apply it to. We also saw two hints that can help us improve a bad specification, but they don't always work: sometimes by ``inductivizing'' a definition we can gain a lot, but sometimes inductive definitions are a path to oblivion and more patchwork-y definitions reign supreme.
 
