Thesis: hunting for references to cite on the matter of the 'Sliding admit' (basically a top-down proving technique based on spamming admit and then filling the gaps later).

--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -1199,6 +1199,10 @@ We have defined our quicksort template, proved it terminating and derived the fu
 
 
 
+\cite{SlidingAdmit}
+
+
+
 \inputminted
 [
     frame=lines,
@@ -1616,6 +1620,10 @@ Mention thesis' repository: \repo
     \textit{The Encode-Decode Method, Relationally (Slides)},
     2015, \\
     \url{https://personal.cis.strath.ac.uk/fredrik.nordvall-forsberg/talks/stp_dundee_2015/stp_dundee_2015-10-07.pdf}
+
+\bibitem{SlidingAdmit}
+    F* wiki, \textit{Sliding admit verification style}, \\
+    \url{https://github.com/FStarLang/FStar/wiki/Sliding-admit-verification-style}
 
 \end{thebibliography}
 
