Thesis: more hunting for references. Found: Type-driven Development, Typeful Programming, Type-first Development and, of course, some material on holes in Agda and Haskell.

--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -1194,12 +1194,15 @@ To sum up, all of the boilerplate that we saw in sections \ref{inductivedomain} 
 
 \section{E pluribus unum} \label{epluribus}
 
-We have defined our quicksort template, proved it terminating and derived the functional induction principle. All that remains to be done is the actual correctness proof. But before we do that, we will spend some time comparing proof engineering\footnote{``Proof engineering'' is a fancy name for proving theorems using a proof assistant like Coq, usually applied to large proofs (just like the term ``software engineering'' is usually applied to large projects and not to a hello-world-sized programs).} to software engineering in order to learn a certain technique for proving in the large.\footnote{``Proving in the large''}
+We have defined our quicksort template, proved it terminating and derived the functional induction principle, which will allow us to prove it correct. But before we do that, we will spend some time comparing proof engineering to software engineering in order to learn a certain technique for proving in the large.\footnote{``Proof engineering'' is a fancy name for proving theorems using a proof assistant like Coq. It is usually applied to large and complex proofs, just like the term ``software engineering'' is usually applied to large and complex software systems and not to hello-world-sized programs.}
 
 
 
 
 \cite{SlidingAdmit}
+\cite{Typeful}
+\cite{TypeDriven}
+\cite{TypeFirst}
 
 
 
@@ -1624,6 +1627,22 @@ Mention thesis' repository: \repo
 \bibitem{SlidingAdmit}
     F* wiki, \textit{Sliding admit verification style}, \\
     \url{https://github.com/FStarLang/FStar/wiki/Sliding-admit-verification-style}
+
+\bibitem{Typeful}
+    Luca Cardelli,
+    \textit{Typeful Programming}, 1991 \\
+    \url{http://www.lucacardelli.name/Papers/TypefulProg.pdf}
+
+\bibitem{TypeDriven}
+    Edwin Brady,
+    \textit{Type-Driven Development with Idris},
+    2017 \\
+    \url{https://www.manning.com/books/type-driven-development-with-idris}
+
+\bibitem{TypeFirst}
+    Tomas Petricek,
+    \textit{Why type-first development matters},
+    \url{http://tomasp.net/blog/type-first-development.aspx/}
 
 \end{thebibliography}
 
